syntax = "proto3";

option csharp_namespace = "ProductgRPCServer";

package product;

service ProductGrpc {
    // Get product details
    rpc GetProduct (ProductRequest) returns (ProductResponse);
    
    // Update stock level
    rpc UpdateStock (StockUpdateRequest) returns (StockUpdateResponse);
    
    // Stream stock changes
    rpc SubscribeToStockChanges (StockSubscriptionRequest) returns (stream StockUpdateResponse);
}

message ProductRequest {
    string product_id = 1;
}

message ProductResponse {
    string product_id = 1;
    string name = 2;
    double price = 3;
    int32 current_stock = 4;
}

message StockUpdateRequest {
    string product_id = 1;
    int32 quantity_change = 2;
    string transaction_id = 3;
}

message StockUpdateResponse {
    bool success = 1;
    string message = 2;
    int32 new_stock_level = 3;
}

message StockSubscriptionRequest {
    repeated string product_ids = 1;
}
